; ModuleID = '/home/carl/AnghaBench/libevent/extr_event.c_event_config_set_max_dispatch_interval.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_event.c_event_config_set_max_dispatch_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_config = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.timeval = type { i32 }

@INT_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @event_config_set_max_dispatch_interval(%struct.event_config* %0, %struct.timeval* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.event_config*, align 8
  %6 = alloca %struct.timeval*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.event_config* %0, %struct.event_config** %5, align 8
  store %struct.timeval* %1, %struct.timeval** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.timeval*, %struct.timeval** %6, align 8
  %10 = icmp ne %struct.timeval* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %4
  %12 = load %struct.event_config*, %struct.event_config** %5, align 8
  %13 = getelementptr inbounds %struct.event_config, %struct.event_config* %12, i32 0, i32 2
  %14 = load %struct.timeval*, %struct.timeval** %6, align 8
  %15 = call i32 @memcpy(%struct.TYPE_2__* %13, %struct.timeval* %14, i32 4)
  br label %20

16:                                               ; preds = %4
  %17 = load %struct.event_config*, %struct.event_config** %5, align 8
  %18 = getelementptr inbounds %struct.event_config, %struct.event_config* %17, i32 0, i32 2
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i32 -1, i32* %19, align 4
  br label %20

20:                                               ; preds = %16, %11
  %21 = load i32, i32* %7, align 4
  %22 = icmp sge i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %20
  %24 = load i32, i32* %7, align 4
  br label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @INT_MAX, align 4
  br label %27

27:                                               ; preds = %25, %23
  %28 = phi i32 [ %24, %23 ], [ %26, %25 ]
  %29 = load %struct.event_config*, %struct.event_config** %5, align 8
  %30 = getelementptr inbounds %struct.event_config, %struct.event_config* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* %8, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %27
  store i32 0, i32* %8, align 4
  br label %34

34:                                               ; preds = %33, %27
  %35 = load i32, i32* %8, align 4
  %36 = load %struct.event_config*, %struct.event_config** %5, align 8
  %37 = getelementptr inbounds %struct.event_config, %struct.event_config* %36, i32 0, i32 1
  store i32 %35, i32* %37, align 4
  ret i32 0
}

declare dso_local i32 @memcpy(%struct.TYPE_2__*, %struct.timeval*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
